# tiny-dynamo

./: Cargo.toml  LICENSE  README.md  build.rs  crates.js  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/workflows/: CHANGELOG.md  main.yml
benches/: bench.rs
examples/: hello.rs
implementors/core/default/: trait.Default.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/str/traits/: trait.FromStr.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/tiny_dynamo/: trait.Requests.js
src/: fastly_requests.rs  fastly_transport.rs  lib.rs  main.rs  region.rs  reqwest_requests.rs  reqwest_transport.rs
src/tiny_dynamo/: lib.rs.html  region.rs.html  reqwest_requests.rs.html
tiny_dynamo/: all.html  enum.Region.html  index.html  sidebar-items.js  struct.Const.html  struct.Credentials.html  struct.DB.html  struct.Table.html  struct.TableInfo.html  trait.Requests.html  trait.Transport.html  type.Request.html
tiny_dynamo/region/: enum.Region.html  index.html  sidebar-items.js
tiny_dynamo/reqwest_requests/: index.html  sidebar-items.js  struct.Reqwest.html
