[package]
name = "tiny-dynamo"
version = "0.1.1"
edition = "2018"
description = " A tinier, simpler, key-value focused interface for AWS DynamoDB"
license = "MIT"
keywords = ["aws", "dynamodb"]
readme = "README.md"
documentation = "https://docs.rs/tiny-dynamo"
homepage = "https://github.com/softprops/tiny-dynamo"
repository = "https://github.com/softprops/tiny-dynamo"
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
http = "0.2"
sha2 = "0.9"
hmac = "0.11"
chrono = "0.4"
hex = "0.4"
fastly = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true